<resources>
    <string name="app_name">Story APP</string>

    <string name="name">Name</string>

    <string name="login_title">Hello, let\'s sign in</string>
    <string name="login_text">Are you already explore all of people experience and story, and of course you can also share stories about you</string>

    <string name="invalid_email"> invalid Email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name_required">Name is required!</string>
    <string name="email_valid">Valid</string>
    <string name="email_invalid">Invalid</string>
    <string name="password_required">Input Password </string>
    <string name="password_valid"> Password valid </string>
    <string name="password_invalid"> Password invalid </string>
    <string name="register">Register</string>
    <string name="warning_password">Password must be more than 6 character</string>
    <string name="warning_email">Invalid email</string>
    <string name="caution">Caution !!!</string>
    <string name="To_do">Do you want to logout ?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="camera">camera</string>
    <string name="upload">Upload</string>
    <string name="getgallery">getgallery</string>
    <string name="caption">add a caption</string>
    <string name="message_error">upload failed</string>
    <string name="retry">Retry</string>

    <string name="text_login">if you don\'t have account,</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="menu_maps">Maps</string>
    <string name="add">Add Story</string>
    <string name="title_maps_story">MapsStory</string>

    <string name="register_title">Let\'s create an account</string>
    <string name="register_message">just the first time using this app? okay, let\'s create an account first</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>